tests/compile-fail/Rule_8_11.rs
pub const arr: [i32] = []; //~ ERROR doesn't have a size known at compile-time
//~^ ERROR expected slice, found array of 0 elements

fn main() {}
